# px-asset-extract

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/: basic_usage.py  batch_processing.py
px_asset_extract/: __init__.py  classifier.py  cli.py  extractor.py  manifest.py  segmenter.py  utils.py  visualizer.py
tests/: conftest.py  test_classifier.py  test_extractor.py  test_integration.py  test_segmenter.py
